// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component story renders match snapshots: invalid 1`] = `
<div>
  <select
    className="dropdown isInvalid"
    onChange={[Function]}
    value=""
  >
    <option
      disabled={true}
      key="0"
      value=""
    >
      - Select -
    </option>
    <option
      key="1"
      value="1"
    >
      1
    </option>
    <option
      key="2"
      value="2"
    >
      2
    </option>
    <option
      key="3"
      value="3"
    >
      3
    </option>
    <option
      key="4"
      value="4"
    >
      4
    </option>
  </select>
</div>
`;

exports[`Dropdown component story renders match snapshots: withPrimitiveOptions 1`] = `
<div>
  <select
    className="dropdown"
    onChange={[Function]}
    value=""
  >
    <option
      disabled={true}
      key="0"
      value=""
    >
      - Select -
    </option>
    <option
      key="1"
      value="1"
    >
      1
    </option>
    <option
      key="2"
      value="2"
    >
      2
    </option>
    <option
      key="3"
      value="3"
    >
      3
    </option>
    <option
      key="4"
      value="4"
    >
      4
    </option>
  </select>
</div>
`;

exports[`Dropdown component story renders match snapshots: withSelectedValue 1`] = `
<div>
  <select
    className="dropdown"
    onChange={[Function]}
    value="key2"
  >
    <option
      disabled={true}
      key="0"
      value=""
    >
      - Select -
    </option>
    <option
      key="value1"
      value="value1"
    >
      1
    </option>
    <option
      key="value2"
      value="value2"
    >
      2
    </option>
    <option
      key="value3"
      value="value3"
    >
      3
    </option>
    <option
      key="value4"
      value="value4"
    >
      4
    </option>
  </select>
</div>
`;

exports[`Dropdown component story renders match snapshots: withoutSelectedValue 1`] = `
<div>
  <select
    className="dropdown"
    onChange={[Function]}
    value=""
  >
    <option
      disabled={true}
      key="0"
      value=""
    >
      - Select -
    </option>
    <option
      key="value1"
      value="value1"
    >
      1
    </option>
    <option
      key="value2"
      value="value2"
    >
      2
    </option>
    <option
      key="value3"
      value="value3"
    >
      3
    </option>
    <option
      key="value4"
      value="value4"
    >
      4
    </option>
  </select>
</div>
`;
